Assignment-12/src/objects/Archive_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Archive Config</label>
    <pluralLabel>Archive Configs</pluralLabel>
</CustomObject>